fix(EV-4913): add whitespace to froalar table td (#3042)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1980,7 +1980,7 @@ span.token.active-word {
 
 .fr-view table td,
 .fr-view table th {
-  padding: 8px 0;
+  padding: 8px;
 }
 
 .responses-boxes-btn {
